fix: add agent get request
